// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio checked set to false 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c0 .c1 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c1 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c1::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c1 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c1 {
  opacity: 0.5;
}

<div
  className="c0 "
>
  <input
    checked={false}
    className=""
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio checked set to true 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c0 .c1 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c1 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c1::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c1 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c1 {
  opacity: 0.5;
}

<div
  className="c0 "
>
  <input
    checked={true}
    className=""
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio default 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c0 .c1 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c1 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c1::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c1 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c1 {
  opacity: 0.5;
}

<div
  className="c0 "
>
  <input
    className=""
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio should accept disabled 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c0 .c1 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c1 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c1::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c1 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c1 {
  opacity: 0.5;
}

<div
  className="c0 "
>
  <input
    className=""
    disabled={true}
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio with aria-describedby 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c0 .c1 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c1 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c1::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c1 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c1 {
  opacity: 0.5;
}

<div
  className="c0 "
>
  <input
    aria-describedby="some-id"
    className=""
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Radio with name and id 1`] = `
.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c0 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c0 .c1 {
  background: #FFFFFF;
}

.c0 input[type='radio']:checked + .c1 {
  background: #0087e1;
  border-color: #0087e1;
}

.c0 input[type='radio']:checked + .c1::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c0 input[type='radio']:focus + .c1 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c0 input[type='radio']:disabled + .c1 {
  opacity: 0.5;
}

<div
  className="c0 "
>
  <input
    className=""
    id="Chucky"
    name="Chuck"
    type="radio"
  />
  <div
    className="c1 c2"
  />
</div>
`;
